--- a/caffeApp/Views/Waiter/AddOrderView.axaml
+++ b/caffeApp/Views/Waiter/AddOrderView.axaml
@@ -80,7 +80,9 @@
 				<TextBlock>Итого:</TextBlock>
 				
 				<TextBlock Text="{Binding SumOrder}"></TextBlock>
-				
+				<TextBlock Text=" ₽"></TextBlock>
+
+
 			</StackPanel>
 
 
@@ -128,8 +130,9 @@
 						<DataTemplate>
 							<StackPanel Orientation="Horizontal">
 								<TextBlock Text="{Binding Name}"></TextBlock>
-								<TextBlock Text="   $"></TextBlock>
-								<TextBlock Text="{Binding Price}"></TextBlock>
+								<TextBlock Text=" "></TextBlock>
+								<TextBlock Text="{Binding Price}" />
+								<TextBlock Text="₽"></TextBlock>
 							</StackPanel>
 						</DataTemplate>
 					</ComboBox.ItemTemplate>
