--- a/caffeApp/Views/MainWindow.axaml
+++ b/caffeApp/Views/MainWindow.axaml
@@ -42,7 +42,7 @@
 				<views:AppViewLocator />
 			</rxui:RoutedViewHost.ViewLocator>
 		</rxui:RoutedViewHost>
-		<StackPanel Grid.Column="0" Orientation="Vertical" Margin="15">
+		<StackPanel IsVisible="{Binding !IsNotAuthorizedUser}" Grid.Column="0" Orientation="Vertical" Margin="15">
 			<StackPanel.Styles>
 				<Style Selector="StackPanel > :is(Control)">
 					<Setter Property="Margin" Value="2"/>
