--- a/caffeApp/Views/ReportView.axaml
+++ b/caffeApp/Views/ReportView.axaml
@@ -126,6 +126,7 @@
 				<DataGrid
 					IsVisible="{Binding ReportIsReady}"
 					Margin="0 10"
+					IsReadOnly="True"
 					HorizontalAlignment="Stretch"
 					VerticalAlignment="Stretch"
 					ItemsSource="{Binding Orders}">
@@ -162,15 +163,18 @@
 				Margin="0 0 0 0"
 				IsVisible="{Binding !IsWarning}">
 				<TextBlock Margin="0 5">Количество заказов</TextBlock>
-				<TextBox Text="{Binding CountOrders}"></TextBox>
+				<TextBox 
+					IsReadOnly="True"
+					Text="{Binding CountOrders}">
+				</TextBox>
 				<TextBlock Margin="0 5">Количество заказов оплаченных картой</TextBlock>
-				<TextBox Text="{Binding CountIsCreditCard}"></TextBox>
+				<TextBox IsReadOnly="True" Text="{Binding CountIsCreditCard}"></TextBox>
 				<TextBlock Margin="0 5">Количество заказов оплаченных наличными</TextBlock>
-				<TextBox Text="{Binding CountIsCash}"></TextBox>
+				<TextBox IsReadOnly="True" Text="{Binding CountIsCash}"></TextBox>
 				<TextBlock Margin="0 5">Количество неоплаченных заказов</TextBlock>
-				<TextBox Text="{Binding CountIsNotPayedOrders}"></TextBox>
+				<TextBox IsReadOnly="True" Text="{Binding CountIsNotPayedOrders}"></TextBox>
 				<TextBlock Margin="0 5">Сумма выручки</TextBlock>
-				<TextBox Text="{Binding SumPay}"></TextBox>
+				<TextBox IsReadOnly="True" Text="{Binding SumPay}"></TextBox>
 				<Button
 					Command="{Binding SaveReport}"
 					Margin="0 10"
